# bazel_cmake_rust

./: .bazelrc  README.org  TODO.org  WORKSPACE
cc_lib/: BUILD.bazel  bar.cc  bar.h  main.cc  test_bar.cc  test_panic.cc  test_rust_panic_overcomes_expect_any_throw.py
cpp_lib_cmake/: BUILD.bazel  CMakeLists.txt  lib.cpp  lib.hpp  post_build_ninja_summary.py
rust_lib/: BUILD.bazel  lib.rs
