package(default_visibility = ["//visibility:public"])

cc_library(
    name = "pure_bazel_cpp_lib",
    srcs = [
        "bar.cc",
    ],
    hdrs = ["bar.h"],
    deps = ["//rust_lib:rust_lib"]
)

cc_binary(
    name = "native_cmake_cc_bin",
    deps = [":pure_bazel_cpp_lib",
            "//cpp_lib_cmake:cmake_lib"
            ],
    srcs = ["main.cc"],
)


