cc_library(
    name = "pure_bazel_cpp_lib",
    srcs = [
        "bar.cc",
    ],
    hdrs = ["bar.h"],
    deps = ["//rust_lib:rust_lib",
            "//cpp_lib_cmake:cmake_lib",
            "@fmt"
            ]
)

cc_binary(
    name = "native_cmake_cc_bin",
    deps = [":pure_bazel_cpp_lib",
            "//cpp_lib_cmake:cmake_lib",
            "@fmt"
            ],
    srcs = ["main.cc"],
)


cc_test(
    name = "test_bar",
    size = "small",
    srcs = ["test_bar.cc"],
    deps = ["//rust_lib:rust_lib",
            "@com_google_googletest//:gtest_main",
            ":pure_bazel_cpp_lib"],
)

cc_binary(
    name = "test_rust_panic_overcomes_expect_any_throw",
    deps = [":pure_bazel_cpp_lib", "@com_google_googletest//:gtest_main"],
    srcs = ["test_panic.cc"],
)

py_test(
    name = "py_test_rust_panic_overcomes_expect_any_throw",
    size = "small",
    srcs = ["test_rust_panic_overcomes_expect_any_throw.py"],
    main = "test_rust_panic_overcomes_expect_any_throw.py",
    data = [":test_rust_panic_overcomes_expect_any_throw"],
    args = ["$(location :test_rust_panic_overcomes_expect_any_throw)"],
    env = {"RUST_BACKTRACE": "full"}
)
