load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")
load("@rules_cc//cc:defs.bzl", "cc_toolchain", "cc_toolchain_suite")

# filegroup(
#     name = "empty",
#     srcs = [],
# )

# cc_toolchain_suite(
#     name = "cpp",
#     toolchains = {
#         "k8": ":cc-compiler-clang10",
#     },
# )

# cc_toolchain(
#     name = "cc-compiler-clang10",
#     all_files = ":empty",
#     compiler_files = ":empty",
#     dwp_files = ":empty",
#     linker_files = ":empty",
#     objcopy_files = ":empty",
#     strip_files = ":empty",
#     supports_param_files = 1,
#     # # toolchain_config = ":clang10_toolchain",
#     # toolchain_identifier = "clang10_toolchain",
# )

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

cmake(
    name = "cmake_lib",
    lib_name = "libworking_a",
    lib_source = ":all_srcs",
    generate_args = ["-GNinja"],
    # TODO change publicity to only provide this to native_cmake_cc_bin
    visibility = ["//visibility:public"],
)
