load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")
load("@rules_cc//cc:defs.bzl", "cc_toolchain", "cc_toolchain_suite")

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
)

cmake(
    name = "cmake_lib",
    lib_name = "libworking_a",
    lib_source = ":all_srcs",
    generate_args = ["-GNinja"],
    visibility = ["//cc_lib:__pkg__"],
)
